<resources>
    <string name="app_name">Forum</string>
    <string name="slider_skip_btn_text">Skip</string>
    <string name="slider_continue_btn_text">Continue</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="first_slide_title">Share a piece of knowledge to improve in practical skills</string>
    <string name="first_slide_content">Explore a lof of information that can provide students with a large range of knowledge more faster</string>
    <string name="second_slide_title">Providing fretures with the collection of lebtures for interested students</string>
    <string name="second_slide_content">Students can choose their favourite collection of subjects to read the lebture from teachers and set as favourite for reading later</string>
    <string name="third_slide_title">Sharing resource features between students to improve their skills</string>
    <string name="third_slide_content">Students can also upload to share a lot of resource for other students expecially old questions and answer keys to  practise</string>
    <string name="fourth_slide_title">Features to provide the discussion between students if they have somthing to understant</string>
    <string name="fourth_slide_content">Students can easily dicuss with one another if they have a lot of questions that they do not understant very well</string>
    <string name="loginHeaderContent">Let share a lot of information for students to practise more</string>
    <string name="loginHeaderTitle">Sign in</string>
    <string name="input_user_name">Username</string>
    <string name="input_password">Password</string>
    <string name="user_signup_btn_text">Dont have an account? Sign up</string>
    <string name="application_name">Learning Forum</string>
    <string name="user_remember_check">Remeber me</string>
    <string name="user_forget_psd">Forget password</string>
    <string name="input_user_password">Password</string>
    <string name="user_create_account">Create Account</string>
    <string name="input_userConfirm_password">Confirm Password</string>
    <string name="signupHeaderTitle">Signup</string>
    <string name="signupHeaderContent">We need your information to create an account and so put your information below</string>
    <string name="input_userRoll_number">Roll number</string>
    <string name="title_activity_upload">uploadActivity</string>
    <string name="post_upload_username">U Han Bo Htun</string>
    <string name="post_upload_user_subjects">Digital Logic Design</string>
    <string name="post_upload_text">Post</string>
    <string name="user_upload_postBtnText">Post</string>
    <string name="post_upload_title">Upload Post</string>
    <string name="user_post_upload_BtnText">Post</string>
    <string name="login_select_year">Select year</string>
    <string name="dialog_edit_hint">Insert Link</string>
    <string name="title_activity_selection_login">SelectionLogin</string>
    <string name="default_sign_up_btn_text">Sign up</string>
    <string name="input_user_email_address">Gmail</string>
    <string name="default_signup_confirm_password">Confirm Password</string>
    <string name="defaultSignupHeaderTitle">Signup</string>
    <string name="defaultSignupHeaderContent">Put your information below to create an account and login into EduLite to share resources</string>
    <string name="default_login_gmail_address">Gmail</string>
    <string name="default_login_remember_check">Remember me</string>
    <string name="default_login_forget_password">Forget Password</string>
    <string name="default_login_confirm_btn">Sign in</string>
    <string name="defaultLoginHeaderTitle">Sign in</string>
    <string name="defaultLoginHeaderContent">Let\\\'s share a lot of information for students to practise more</string>
</resources>
