<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:theme="@style/AppTheme"
    android:background="@android:color/white"
    >
    <LinearLayout
        android:id="@+id/login_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/user_login_header_background"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginHeaderTitle"
            android:textSize="50dp"
            android:textColor="@android:color/white"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginHeaderContent"
            android:layout_margin="30dp"
            android:textSize="15sp"
            android:textColor="@android:color/white"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/login_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/login_header_layout"
        android:layout_marginLeft="@dimen/login_input_layout_margin"
        android:layout_marginRight="@dimen/login_input_layout_margin"
        android:layout_marginTop="50dp"
        >
        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_user_name"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:fontFamily="sans-serif"
            android:textSize="18sp"
            android:ems="10"
            android:background="@color/colorTransperant"
            android:padding="10dp"
            android:drawableLeft="@drawable/ic_input_username"
            android:drawablePadding="10dp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorDarkWhite"
            />

        <EditText
            android:id="@+id/login_user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_user_password"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:fontFamily="sans-serif"
            android:textSize="18sp"
            android:ems="10"
            android:background="@color/colorTransperant"
            android:padding="10dp"
            android:layout_marginTop="@dimen/input_layout_margin"
            android:drawableLeft="@drawable/ic_input_password"
            android:drawablePadding="10dp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorDarkWhite"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/input_layout_margin"
            >
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_remember_check"
                android:textSize="15sp"
                android:textColor="@android:color/darker_gray"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_forget_psd"
                android:textSize="15sp"
                android:textColor="@android:color/darker_gray"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>
        <Button
            android:id="@+id/user_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginHeaderTitle"
            android:textSize="15sp"
            android:inputType="textCapWords"
            android:fontFamily="sans-serif"
            android:layout_marginTop="@dimen/login_layout_component_margin"
            android:background="@drawable/user_signin_btn"
            android:textColor="@color/colorPrimary"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            />
        <Button
            android:id="@+id/user_facebook_loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="facebook"
            android:textSize="15sp"
            android:inputType="textCapWords"
            android:fontFamily="sans-serif"
            android:layout_marginTop="5dp"
            android:background="@drawable/user_signin_facebook_btn"
            android:textColor="@color/colorWhite"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            />
    </LinearLayout>
</RelativeLayout>