<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DefaultSignIn"
    android:theme="@style/AppTheme"
    android:background="@android:color/white"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"

    >
    <android.support.design.widget.AppBarLayout
        android:id="@+id/default_sign_up_action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/default_sign_up_collapse_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="Sign up"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleMarginEnd="68dp"
            app:expandedTitleMarginStart="48dp"
            >
            <LinearLayout
                android:id="@+id/signup_header_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:background="@drawable/user_login_header_background"
                app:layout_collapseMode="parallax"
                >
                <TextView
                    android:id="@+id/default_signup_header_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultSignupHeaderTitle"
                    android:textSize="50dp"
                    android:textColor="@android:color/white"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    />
                <TextView
                    android:id="@+id/default_signup_header_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultSignupHeaderContent"
                    android:layout_margin="30dp"
                    android:textSize="15sp"
                    android:textColor="@android:color/white"
                    />

            </LinearLayout>
            <android.support.v7.widget.Toolbar
                android:id="@+id/default_sign_up_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:popupTheme="@style/Theme.AppCompat.Light"
                app:layout_collapseMode="pin"
                />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            >
            <LinearLayout
                android:id="@+id/signup_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/login_input_layout_margin"
                android:layout_marginRight="@dimen/login_input_layout_margin"
                android:layout_marginTop="50dp"
                >
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorPrimary"
                    app:hintAnimationEnabled="true"
                    android:theme="@style/AppTheme.FloatingLabelApperance"
                    >
                    <EditText
                        android:id="@+id/default_signup_gmail_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_user_email_address"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/colorPrimary"
                        android:fontFamily="sans-serif"
                        android:textSize="18sp"
                        android:ems="10"
                        android:background="@color/colorTransperant"
                        android:padding="10dp"
                        android:drawableLeft="@drawable/ic_input_username"
                        android:drawablePadding="10dp"
                        />
                </android.support.design.widget.TextInputLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorDarkWhite"
                    />
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorPrimary"
                    android:layout_marginTop="10dp"
                    app:hintAnimationEnabled="true"
                    android:theme="@style/AppTheme.FloatingLabelApperance"
                    >
                    <EditText
                        android:id="@+id/default_signup_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_user_password"
                        android:inputType="textPassword"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/colorPrimary"
                        android:fontFamily="sans-serif"
                        android:textSize="18sp"
                        android:ems="10"
                        android:background="@color/colorTransperant"
                        android:padding="10dp"
                        android:layout_marginTop="@dimen/input_layout_margin"
                        android:drawableLeft="@drawable/ic_input_password"
                        android:drawablePadding="10dp"/>
                </android.support.design.widget.TextInputLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorDarkWhite"
                    />
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorPrimary"
                    android:layout_marginTop="10dp"
                    app:hintAnimationEnabled="true"
                    android:theme="@style/AppTheme.FloatingLabelApperance"
                    >
                    <EditText
                        android:id="@+id/default_signup_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/default_signup_confirm_password"
                        android:inputType="textPassword"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/colorPrimary"
                        android:fontFamily="sans-serif"
                        android:textSize="18sp"
                        android:ems="10"
                        android:background="@color/colorTransperant"
                        android:padding="10dp"
                        android:layout_marginTop="@dimen/input_layout_margin"
                        android:drawableLeft="@drawable/ic_input_password"
                        android:drawablePadding="10dp"/>
                </android.support.design.widget.TextInputLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorDarkWhite"
                    />
                <Button
                    android:id="@+id/default_signup_confirm_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_sign_up_btn_text"
                    android:textSize="15sp"
                    android:inputType="textCapWords"
                    android:fontFamily="sans-serif"
                    android:layout_marginTop="@dimen/login_layout_component_margin"
                    android:background="@drawable/user_signin_btn"
                    android:textColor="@color/colorPrimary"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    />

                <LinearLayout
                    android:id="@+id/selection_term_service_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="20dp"
                    >
                    <TextView
                        android:id="@+id/default_signup_term_of_service_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="By creating an account, I accept EduLight's"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        android:textColor="@android:color/darker_gray"
                        />
                    <TextView
                        android:id="@+id/default_signup_term_of_service_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="Terms of Service"
                        android:textSize="15sp"
                        android:textColor="@android:color/darker_gray"
                        />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>